# kynema-driver

./: CMakeLists.txt  CTestConfig.cmake  README.md
.github/workflows/: ci.yml
app/exawind/: exawind.cpp
app/kynema/: CMakeLists.txt  kynema.cpp
cmake/: kynema-utils.cmake
src/: AMRTiogaIface.cpp  AMRTiogaIface.h  CMakeLists.txt  Exawind.h  Kynema.h  KynemaSGF.cpp  KynemaSGF.h  KynemaSolver.cpp  KynemaSolver.h  KynemaUGF.cpp  KynemaUGF.h  MPIUtilities.h  MemoryUsage.cpp  MemoryUsage.h  OversetSimulation.cpp  OversetSimulation.h  ParallelPrinter.h  SGFTiogaIface.cpp  Timers.h
test/: CMakeLists.txt  CTestNightlyScript.cmake
test/test_files/abl-bndry-input/: abl-bndry-input.yaml
test/test_files/abl-bndry-output/: abl-bndry-output.yaml
test/test_files/ctv/: ctv1.yaml  ctv2.yaml  ctv3.yaml
test/test_files/dam-break-block/: dam-break-block.yaml
test/test_files/flat-surface/: flat-surface.yaml
test/test_files/floating-block/: floating-block-amr.inp  floating-block-nalu.yaml  floating-block.yaml
test/test_files/hybrid-multi-cylinder/: hybrid-multi-cylinder.yaml
test/test_files/linear-waves/: linear-waves.yaml
test/test_files/nalu-nalu-panel/: nalu-nalu-panel.yaml
test/test_files/sgf-ugf-cylinder/: sgf-ugf-cylinder.yaml
test/test_files/sloshing-tank/: sloshing-tank.yaml
test/test_files/sphere/: sphere.yaml
test/test_files/stokes-waves-cylinder/: stokes-waves-cylinder.yaml
test/test_files/ugf-ugf-cylinder/: ugf-ugf-cylinder.yaml
test/test_files/ugf-ugf-panel/: ugf-ugf-panel.yaml
test/test_files/zalesak/: zalesak.yaml
